# pam-authramp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-GPL  LICENSE-MIT  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: reset.rs
crates/common/: Cargo.toml
crates/common/src/: actions.rs  config.rs  lib.rs  settings.rs
crates/common/src/util/: mod.rs  syslog.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  settings.rs  tally.rs
crates/lib/src/utils/: mod.rs  syslog.rs
crates/pam/: Cargo.toml
crates/pam/src/: conv.rs  items.rs  lib.rs  macros.rs
crates/util/: Cargo.toml
crates/util/src/: config.rs  lib.rs  settings.rs  syslog.rs  types.rs
crates/xtask/: Cargo.toml
crates/xtask-integration-test/: Cargo.toml
crates/xtask-integration-test/src/: main.rs
crates/xtask-test-integration/: Cargo.toml
crates/xtask-test-integration/src/: main.rs
crates/xtask/src/: main.rs
example/system-auth/: authramp.conf  system-auth
examples/system-auth/: authramp.conf
integration-test/: Makefile
integration-test/include/: tests.h
integration-test/src/: main.c
integration-test/src/tests/: test-auth-bounce.c  test-invalid-auth.c  test-valid-auth.c  tests.h
integration-test/src/utils/: utils.c  utils.h
src/: lib.rs  settings.rs  tally.rs
src/utils/: syslog.rs
tests/: test-pam-auth.rs
tests/common/: utils.rs
xtask/: Cargo.toml
xtask/src/: main.rs
