[workspace]
resolver= "2"
members = [ "crates/lib", "crates/cli", "crates/util", "crates/xtask-test-integration" ]

[workspace.package]
edition = "2021"
version = "0.9.0"
description = "The AuthRamp PAM module provides an account lockout mechanism based on the number of authentication failures."
authors = ["34n0 <34n0@immerda.ch>"]
license = "GPL-3.0"
homepage = "https://github.com/34N0/pam-authramp/"
repository = "https://github.com/34N0/pam-authramp/"

[workspace.dependencies]
chrono = "0.4.31"
pam-bindings = "0.1.1"
sysinfo = "0.30.0"
syslog = "6.1.0"
users = "0.11.0"
log = "0.4"
toml = "0.8.8"
pam-client = "0.5.0"
tempfile = "3.8.1"
tempdir = "0.3.7"
anyhow = "1.0.75"
cli-xtask = { version = "0.8.0", features = ["main", "lib-crate"] }
xshell = "0.2.5"
clap = { version = "4.4.16", features = ["derive"] }

[workspace.lints.clippy]
pedantic = { level = "deny" }
cast_possible_truncation = "allow"

[package]
name = "pam-authramp"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
pam-client.workspace = true
tempfile.workspace = true
tempdir.workspace = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/libpam_authramp.so", dest = "/usr/lib64/security/libpam_authramp.so", mode = "755" },
    { source = "target/release/authramp", dest = "/usr/bin/authramp", mode = "755" },
    { source = "examples/system-auth/authramp.conf", dest = "/etc/security/authramp.conf", mode = "644" },
]

[package.metadata.deb]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libpam_authramp.so", "usr/lib64/security/", "755"],
    ["target/release/authramp", "/usr/bin/authramp", "755"],
    ["examples/system-auth/authramp.conf", "/etc/security/authramp.conf", "644"],
]

[lints]
workspace = true
