[workspace]
resolver= "2"
members = [ "crates/lib", "crates/cli", "crates/common", "crates/xtask-integration-test" ]

[workspace.package]
edition = "2021"
version = "0.9.9"
description = "The AuthRamp PAM module provides an account lockout mechanism based on the number of authentication failures."
authors = ["34n0 <34n0@immerda.ch>"]
license = "GPL-3.0"
homepage = "https://github.com/34N0/pam-authramp/"
repository = "https://github.com/34N0/pam-authramp/"

[workspace.dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
cli-xtask = { version = "0.8.0", features = ["main", "lib-crate"] }
colored = "2.1.0"
libc = "0.2.152"
log = "0.4"
pam-bindings = "0.1.1"
pam-client = "0.5.0"
sysinfo = "0.30.0"
syslog = "6.1.0"
tempdir = "0.3.7"
tempfile = "3.8.1"
toml = "0.8.8"
uzers = "0.11.3"
xshell = "0.2.5"

[workspace.lints.clippy]
pedantic = { level = "deny" }
cast_possible_truncation = "allow"

[package]
name = "pam-authramp"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[dev-dependencies]
pam-client.workspace = true
tempdir.workspace = true
tempfile.workspace = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/libpam_authramp.so", dest = "/usr/lib64/security/libpam_authramp.so", mode = "755" },
    { source = "target/release/authramp", dest = "/usr/bin/authramp", mode = "755" },
    { source = "examples/system-auth/authramp.conf", dest = "/etc/security/authramp.conf", mode = "644" },
]

[package.metadata.deb]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libpam_authramp.so", "usr/lib64/security/", "755"],
    ["target/release/authramp", "/usr/bin/authramp", "755"],
    ["examples/system-auth/authramp.conf", "/etc/security/authramp.conf", "644"],
]

[lints]
workspace = true