[workspace]
resolver= "2"
members = [ "crates/cli", "crates/common", "crates/pam" ]

[workspace.package]
edition = "2021"
version = "0.9.99"
description = "The AuthRamp PAM module provides an account lockout mechanism based on the number of authentication failures."
authors = ["34n0 <34n0@immerda.ch>"]
license = "GPL-3.0"
homepage = "https://github.com/34N0/pam-authramp/"
repository = "https://github.com/34N0/pam-authramp/"

[workspace.dependencies]
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
colored = "2.1.0"
libc = "0.2.153"
tempdir = "0.3.7"
tempfile = "3.8.1"
toml = "0.8.8"
uzers = "0.11.3"

[workspace.lints.clippy]
pedantic = { level = "deny" }
cast_possible_truncation = "allow"

[package]
name = "pam-authramp"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "pam_authramp"
path = "src/lib.rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
chrono.workspace = true
libc.workspace = true
toml.workspace = true
common = { path = "crates/common" }
pam = { path = "crates/pam" }
uzers.workspace = true

[dev-dependencies]
tempdir.workspace = true
tempfile.workspace = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/libpam_authramp.so", dest = "/usr/lib64/security/libpam_authramp.so", mode = "755" },
    { source = "target/release/authramp", dest = "/usr/bin/authramp", mode = "755" },
    { source = "examples/system-auth/authramp.conf", dest = "/etc/security/authramp.conf", mode = "644" },
]

[package.metadata.deb]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libpam_authramp.so", "usr/lib64/security/", "755"],
    ["target/release/authramp", "/usr/bin/authramp", "755"],
    ["examples/system-auth/authramp.conf", "/etc/security/authramp.conf", "644"],
]

[lints]
workspace = true

[profile.release]
strip = true