[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
cli-xtask = { version = "0.8.0", features = ["main", "lib-crate"] }
xshell = "0.2.5"
