[package]
name = "cli"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "authramp"
path = "src/main.rs"
doc = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
common = { path = "../common" }

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
