[package]
name = "common"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "common"
path = "src/lib.rs"
doc = false


[dependencies]
chrono.workspace = true
log.workspace = true
pam-bindings.workspace = true
sysinfo.workspace = true
syslog.workspace = true
toml.workspace = true
uzers.workspace = true

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
