[package]
name = "lib"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "pam_authramp"
path = "src/lib.rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
chrono.workspace = true
pam-bindings.workspace = true
uzers.workspace = true
toml.workspace = true
log.workspace = true
util = { path = "../util" }

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
