[package]
name = "lib"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "pam_authramp"
path = "src/lib.rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
chrono.workspace = true
log.workspace = true
pam-bindings.workspace = true
toml.workspace = true
util = { path = "../util" }
uzers.workspace = true

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
