[package]
name = "lib"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "pam_authramp"
path = "src/lib.rs"
crate-type = ["cdylib"]
doc = false

[dependencies]
chrono.workspace = true
libc.workspace = true
log.workspace = true
pam = { path = "../pam" }
toml.workspace = true
common = { path = "../common" }
uzers.workspace = true

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
