[package]
name = "util"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "util"
path = "src/lib.rs"
doc = false


[dependencies]
chrono.workspace = true
pam-bindings.workspace = true
sysinfo.workspace = true
syslog.workspace = true
log.workspace = true
users.workspace = true
toml.workspace = true

[dev-dependencies]
tempdir.workspace = true

[lints]
workspace = true
